--- a/index.html
+++ b/index.html
@@ -204,78 +204,87 @@
 						</div>
 					</div>
 				</section>
-				<div class="page__our-benefits our-benefits-page">
-					<div class="our-benefits-page__container">
-						<div class="our-benefits-page__block-title block-title">
-							<div class="block-title__subtitle">Who we are</div>
-							<h2 class="block-title__heading">Why Createx?</h2>
+				<section class="page__benefits benefits-page">
+					<div class="benefits-page__container">
+						<div class="benefits-page__block-title block-title">
+							<div class="block-title__subtitle">Our Events</div>
+							<h2 class="block-title__heading">That’s how we do it</h2>
 						</div>
-						<div class="our-benefits-page__advantages">
-							<div class="our-benefits-page__adnantage">Experienced Tutors</div>
-							<div class="our-benefits-page__adnantage">Experienced Tutors</div>
-							<div class="our-benefits-page__adnantage">Experienced Tutors</div>
-							<div class="our-benefits-page__adnantage">Experienced Tutors</div>
+						<div class="benefits-page__advantages">
+							<a href="" class="benefits-page__adnantage">Experienced Tutors</a>
+							<a href="" class="benefits-page__adnantage">Feedback & Support</a>
+							<a href="" class="benefits-page__adnantage">24/7 Online Library</a>
+							<a href="" class="benefits-page__adnantage">Community</a>
 						</div>
-						<div class="our-benefits-page__body">
-							<div class="our-benefits-page__content">
-								<h3 class="our-benefits-page__h3"></h3>
-								<div class="our-benefits-page__text"></div>
+						<div class="benefits-page__body">
+							<div class="benefits-page__content">
+								<h3 class="benefits-page__heading">Only practicing tutors</h3>
+								<div class="benefits-page__text">Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus vehicula.</div>
 							</div>
-							<img src="" alt="" class="our-benefits-page__img">
+							<div class="benefits-page__picture">
+								<img src="img/benefits/illustration.svg" alt="illustration" class="benefits-page__img">
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="page__events events-page">
+				</section>
+				<section class="page__events events-page">
 					<div class="events-page__container">
 						<div class="events-page__block-title block-title">
-							<div class="block-title__subtitle">Who we are</div>
-							<h2 class="block-title__heading">Why Createx?</h2>
+							<div class="block-title__subtitle">Our Events</div>
+							<h2 class="block-title__heading">Lectures & workshops</h2>
 						</div>
 						<div class="events-page__body">
 							<div class="events-page__item">
-								<div class="events-page__num"></div>
 								<div class="events-page__date">
-									<div class="events-page__month"></div>
-									<div class="events-page__work-time"></div>
+									<div class="events-page__num">05</div>
+									<div class="events-page__box">
+										<div class="events-page__month">August </div>
+										<div class="events-page__work-time">11:00 – 14:00</div>
+									</div>
 								</div>
 								<div class="events-page__content">
-									<div class="events-page__heading"></div>
-									<div class="events-page__text"></div>
+									<div class="events-page__heading">Formation of the organizational structure of the company in the face of uncertainty.</div>
+									<div class="events-page__text">Onine master-class</div>
 								</div>
-								<a href="" class="events-page__btn btn-transparent"></a>
+								<a href="" class="events-page__btn btn btn_transparent">View more</a>
 							</div>
 							<div class="events-page__item">
-								<div class="events-page__num"></div>
 								<div class="events-page__date">
-									<div class="events-page__month"></div>
-									<div class="events-page__work-time"></div>
+									<div class="events-page__num">24</div>
+									<div class="events-page__box">
+										<div class="events-page__month">July </div>
+										<div class="events-page__work-time">11:00 – 14:00</div>
+									</div>
 								</div>
 								<div class="events-page__content">
-									<div class="events-page__heading"></div>
-									<div class="events-page__text"></div>
+									<div class="events-page__heading">Building a customer service department. Best Practices.</div>
+									<div class="events-page__text">Onine master-class</div>
 								</div>
-								<a href="" class="events-page__btn btn-transparent"></a>
+								<a href="" class="events-page__btn btn btn_transparent">View more</a>
 							</div>
 							<div class="events-page__item">
-								<div class="events-page__num"></div>
 								<div class="events-page__date">
-									<div class="events-page__month"></div>
-									<div class="events-page__work-time"></div>
+									<div class="events-page__num">16</div>
+									<div class="events-page__box">
+										<div class="events-page__month">July </div>
+										<div class="events-page__work-time">11:00 – 14:00</div>
+									</div>
 								</div>
 								<div class="events-page__content">
-									<div class="events-page__heading"></div>
-									<div class="events-page__text"></div>
+									<div class="events-page__heading">How to apply methods of speculative design in practice. Worldbuilding prototyping.</div>
+									<div class="events-page__text">Onine master-class</div>
 								</div>
-								<a href="" class="events-page__btn btn-transparent"></a>
+								<a href="" class="events-page__btn btn btn_transparent">View more</a>
 							</div>
+
 						</div>
 						<div class="events-page__down">
-							<div class="events-page__question"></div>
-							<a href="" class="events-page__btn btn"></a>
+							<div class="events-page__question">Do you want more?</div>
+							<a href="" class="events-page__btndown btn">Explore all events</a>
 						</div>
 					</div>
-				</div>
-				<div class="page__sertificate sertificate-page">
+				</section>
+				<!-- <div class="page__sertificate sertificate-page">
 					<div class="sertificate-page__container">
 						<div class="sertificate-page__body">
 							<div class="sertificate-page__content">
@@ -349,7 +358,7 @@
 								<div class="block-title__subtitle">Who we are</div>
 								<h2 class="block-title__heading">Why Createx?</h2>
 							</div>
-							<a href="" class="latest-page__btn btn-transparent"></a>
+							<a href="" class="latest-page__btn btn_transparent"></a>
 						</div>
 						<div class="latest-page__body">
 							<div class="latest-page__item">
@@ -451,7 +460,7 @@
 						<a href="" class="footer__goto-top">GO TO TOP</a>
 					</div>
 				</div>
-			</footer>
-		</div>
-	</body>
-</html>
+			</footer> -->
+			</div>
+		</body>
+	</html>
